syntax = "proto3";

option java_package = "com.example.grpc";
option java_outer_classname = "MessageProto";

package message;

service MessageService {
  rpc SendMessage (MessageRequest) returns (MessageResponse);
}

message MessageRequest {
  string message = 1;
//  int32 number = 2;
}

message MessageResponse {
  string reply = 1;
//  int32 number = 2;
}
